[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tiles/Tile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://Stackable.gd" type="Script" id=3]
[ext_resource path="res://Dice.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 10 )

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Tiles" type="Node" parent="."]

[node name="RedTile1" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 48, 48 )
player1Sequence = 1

[node name="BlueTile1" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 432, 48 )
player2Sequence = 1

[node name="RedTile2" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 112, 48 )
player1Sequence = 2

[node name="BlueTile2" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 368, 48 )
player2Sequence = 2

[node name="RedTile3" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 176, 48 )
player1Sequence = 3

[node name="BlueTile3" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 304, 48 )
player2Sequence = 3

[node name="Tile4" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 48 )
player1Sequence = 4
player2Sequence = 4

[node name="Tile5" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 104 )
player1Sequence = 5
player2Sequence = 5

[node name="Tile6" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 168 )
player1Sequence = 6
player2Sequence = 6

[node name="Tile7" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 232 )
player1Sequence = 7
player2Sequence = 7

[node name="Tile8" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 296 )
player1Sequence = 8
player2Sequence = 8

[node name="Tile9" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 360 )
player1Sequence = 9
player2Sequence = 9

[node name="Tile10" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 424 )
player1Sequence = 10
player2Sequence = 10

[node name="Tile11" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 240, 488 )
player1Sequence = 11
player2Sequence = 11

[node name="RedTile12" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 176, 488 )
player1Sequence = 12

[node name="BlueTile12" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 304, 488 )
player2Sequence = 12

[node name="BlueTile13" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 368, 488 )
player2Sequence = 13

[node name="Tile13" parent="Tiles" instance=ExtResource( 1 )]
position = Vector2( 104, 488 )
player1Sequence = 13

[node name="Dice" type="Area2D" parent="."]
position = Vector2( 376, 264 )
script = ExtResource( 4 )

[node name="Label" type="Label" parent="Dice"]
margin_left = 640.0
margin_top = 64.0
margin_right = 680.0
margin_bottom = 78.0
text = "Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dice"]
position = Vector2( 656, 72 )
shape = SubResource( 1 )

[node name="Player1Home" type="Node2D" parent="."]
position = Vector2( 48, 104 )
script = ExtResource( 3 )

[node name="Player1Goal" type="Node2D" parent="."]
position = Vector2( 48, 488 )
script = ExtResource( 3 )

[node name="Player2Home" type="Node2D" parent="."]
position = Vector2( 432, 104 )
script = ExtResource( 3 )

[node name="Player2Goal" type="Node2D" parent="."]
position = Vector2( 424, 488 )
script = ExtResource( 3 )

[node name="Dice1" type="Node2D" parent="."]

[node name="Dice2" type="Node2D" parent="."]
